# dak

./: .gitattributes  .gitignore  .oxfmtrc.json  CLAUDE.md  CONVEX_MIGRATION_PLAN.md  LICENSE.md  NOTES_APP_PLAN.md  README.md  TODO  _headers  _site_index.html  health  knip.json  oxlint.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.node.base.json  wrangler.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  python.yml
_site/: index.html
climate-display/: index.html  package.json  vite.config.ts
climate-display/src/: App.tsx  index.css  main.tsx
climate-display/src/components/: Settings.tsx
climate-display/src/stores/: settings-store.ts
dashboard/: .env  .gitignore  README.md  _headers  eslint.config.js  index.html  location.js  package.json  privacy.html  screens.js  script.js  stats.html  style.css  vite.config.js  vite.config.ts  widget-registry.js
dashboard/config/: README.md  dashboard.json
dashboard/docs/: climate-sensors-plan.md  voice-control-plan.md
dashboard/public/: audio-processor.js
dashboard/public/config/: README.md  dashboard.json  test-calendar.json
dashboard/scripts/: bash_profile  brightness.sh  chromium-kiosk.json  clear-cache.sh  config-browser.sh  debug-mode.sh  deploy.sh  install-keyboard.sh  kiosk-mode.sh  kiosk-setup.sh  kiosk.sh  logs.sh  restart-kiosk.sh  zigbee-setup.sh
dashboard/scripts/config/: 99-hide-touchscreen-cursor.rules  99-kiosk-input.rules  chromium-kiosk.json  kiosk-launcher.sh  kiosk.conf
dashboard/scripts/simple-kiosk/: README.md  bash_profile  kiosk-cron  kiosk.sh  remote-setup.sh  setup.sh  wifi.sh
dashboard/services/home-relay/: VOICE_REFACTOR_PLAN.md  commands.py  export_openapi.py  home-relay.service  pyproject.toml  relay.py  sounds.py  test-discover.py  voice-control.service  voice_control.py
dashboard/services/home-relay/app/: main.py
dashboard/services/home-relay/app/models/: adguard.py  brightness.py  common.py  config.py  kasa.py  models.py  mqtt.py  notifications.py  sensors.py  voice.py  voices.py  volume.py  wol.py
dashboard/services/home-relay/app/routers/: adguard.py  brightness.py  config.py  health.py  kasa.py  models.py  mqtt.py  notifications.py  sensors.py  system_stats.py  transcribe.py  voice.py  voices.py  volume.py  wol.py
dashboard/services/home-relay/app/services/: config_service.py  kasa_service.py  mqtt_service.py  notification_service.py  sse_manager.py
dashboard/services/home-relay/routes/: __init__.py  brightness.py  kasa.py  models.py  notifications.py  sensors.py  transcribe.py  voice.py  voices.py  volume.py  wol.py
dashboard/services/zigbee2mqtt/: 99-zigbee.rules  configuration.yaml  zigbee2mqtt.service
dashboard/src/: App.tsx  index.css  types.ts
dashboard/src/api/: relay-client.ts
dashboard/widgets/: weather.html
docs/: sprinkler-controller-plan.md
family-chores/: PLAN-habits-multidaily.md  PLAN.md  README.md  TODO  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
family-chores/sql/: schema.sql
family-chores/src/: App.tsx  Dashboard.tsx  ForgotPassword.tsx  Login.tsx  ResetPassword.tsx  SignUp.tsx  index.css  main.tsx  types.ts
functions/: _middleware.js  eslint.config.js  package.json
functions/api/: _cors.js  reddit-search.js
health-tracker/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  wrangler.toml
health-tracker/docs/: monetization-plan.md  soft-delete-plan.md
health-tracker/sql/: schema.sql
health-tracker/src/: App.tsx  index.css  main.tsx  types.ts
kasa-controller/: index.html  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
kasa-controller/src/: App.tsx  index.css  main.tsx
maintenance-tracker/: .gitignore  README.md  index.html  package.json  vite.config.ts
maintenance-tracker/sql/: schema.sql
maintenance-tracker/src/: App.tsx  index.css  main.tsx  types.ts
notes-app/: .env  .gitignore  .prettierignore  CLAUDE.md  TODO.md  app.config.ts  app.json  eslint.config.js  global.css  index.html  metro.config.cjs  metro.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts  vite.md  vitest.config.ts
notes-app/@types/: lucide-react-native.d.ts
notes-app/app/: +html.tsx  +not-found.tsx  _layout.tsx
notes-app/components/: DesktopSidebar.tsx  MobileHeader.tsx  NoteEditor.tsx  NoteListItem.tsx  NoteSharing.tsx  NotesList.tsx  RichNoteEditor.tsx  SearchBar.tsx  TagChips.tsx
notes-app/docs/: delete-confirmation-implementation.md  family-plan-implementation.md  realtime-ping-pong.md  share-approval-implementation.md
notes-app/e2e/: auth.spec.ts
notes-app/hooks/: useRealtimeSync.ts  useThemeColors.ts  useTimestampRefresh.ts  useVoiceCommands.ts
notes-app/lib/: export-notes.ts  import-notes.ts  realtime.ts  supabase.ts
notes-app/public/: manifest.json  sw.js
notes-app/scripts/: build-tiptap-editor.ts  post-build-pwa.ts
notes-app/sql/: schema.sql
notes-app/src/: App.tsx  index.css  main.tsx  sw-template.ts
notes-app/stores/: auth-store.test.ts  auth-store.ts  notes-store.ts  shares-store.ts  tags-store.ts  theme-store.ts  user-store.ts  view-store.ts
notes-app/tests/: iframe-test.html
notes-app/types/: database.ts
readmes/: api-client.md  climate-display.md  dashboard.md  family-chores.md  health-tracker.md  hooks.md  kasa-client.md  kasa-controller.md  notes-app.md  ui.md  vite-shared-react.md
readmes/screenshots/: PLAN.md
recipe-org/: .env  index.html  package.json  vite.config.ts
recipe-org/sql/: schema.sql
recipe-org/src/: App.tsx  main.tsx  types.ts
reddit-gallery/: index.html  package.json  tsconfig.node.json  vite.config.ts
reddit-gallery/src/: App.tsx  index.css  main.tsx  types.ts
scripts/: build-pages.sh  ci.sh  dev-api.sh
tracker/: index.html  package.json  vite.config.ts
tracker/sql/: schema.sql
tracker/src/: App.tsx  main.tsx  types.ts
ui/: eslint.config.js  package.json
ui/src/: index.ts
(+295 files in other folders)
